<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/nav_search"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_24"
        android:title="@string/sort_by"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_equalizer"
        android:icon="@drawable/ic_equalizer_24"
        android:title="@string/equalizer"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>